--- a/index.hbs
+++ b/index.hbs
@@ -86,9 +86,9 @@
     </section>
     <section>
         <h1>Grading</h1>
-        <p><strong>Problem sets (60%) + Midterm exam (20%) + Project (20%)</strong></p>
+        <p><strong>Problem sets (40%) + One-Hour Test (15%) + Two-Hour Test (25%) + Project (20%)</strong></p>
         <p>
-            Up to (2%) extra credit can be earned by answering student questions on Piazza and for positive contributions to class and lab discussions; there will be additional extra credit opportunities in the homework assignments in the form of optional problems and competitions.
+            Many homework assignments will have problems designated as “optional”.  At the end of the semester, strong performance on these problems may lift the final course grade by up to half a letter grade (e.g. B+ to A-  or A- to A), especially for borderline grades.  You should view the optional problems primarily as a way to engage with more material, if you have the time.  Along with the performance on optional problems, we will also consider significant contributions to Piazza and in-class discussions for boosting a borderline grade.
         </p>
     	<p><em>The course conforms to <a href="http://www.nyu.edu/about/policies-guidelines-compliance/policies-and-guidelines/academic-integrity-for-students-at-nyu.html">NYU’s policy on academic integrity for students</a>.</em></p>
     </section>
@@ -106,20 +106,30 @@
         <a href="http://www-bcf.usc.edu/~gareth/ISL/"><img src="images/james-1x.jpg" srcset="images/james-1x.jpg 1x, images/james-2x.jpg 2x, images/james-3x.jpg 3x" alt="The cover of An Introduction to Statistical Learning"></a>
 
         <dl>
-            <dt><a href="http://www.cs.ubc.ca/~murphyk/MLbook/index.html"><cite>Machine Learning: A Probabilistic Perspective</cite> (Kevin P. Murphy)</a>
-            <dd>This will be the required textbook for the class. It was chosen for several reasons: First, it covers an unusually broad set of topics, and it will serve you well as a reference for many topics beyond the scope of this course. Second, it is has a surprisingly extensive coverage of recent advances in the field, incorporating material that would otherwise only be available in research papers.  Finally, if you're a Matlab coder, there is <a href="https://github.com/probml/pmtk3">extensive software support</a>.
 
             <dt><a href="http://statweb.stanford.edu/~tibs/ElemStatLearn/"><cite>The
             Elements of Statistical Learning</cite> (Hastie, Friedman, and Tibshirani)</a>
-            <dd>This book is available as a free PDF, and it will
-            serve as a nice complement to Murphy's book.  Despite its popularity and the pretty pictures, this is not an easy book.  It's written by three statisticians who invented many of the techniques discussed.
+		<dd>This will be our principal textbook for the first part of the course.  It's written by three statisticians who invented many of the techniques discussed. Despite its popularity and the pretty pictures, this is not an easy book.  There's an easier version of this book that covers many of the same topics, described below. (Available for free as a PDF.)
 
-    	    <dt><a href="http://stanford.edu/~boyd/cvxbook/"><cite>Convex Optimization</cite> (Boyd and Vandenberghe)</a>
-            <dd>This book (also available as a free PDF) was an instant hit in the machine learning community when it was published in 2004.  Most of the optimization problems that we know how to solve are convex problems.  We will be making light use of this book, mostly for its coverage of Lagrangians and duality.  However, it's a good book to get familiar with, as it's very well written and it covers a lot of techniques used in more advanced machine learning literature.
+		<dt><a href="http://www-bcf.usc.edu/~gareth/ISL/"><cite>An Introduction to Statistical Learning</cite> (James, Witten, Hastie, and Tibshirani)</a>
+			<dd>This book is written
+			    by two of the same authors as The Elements of Statistical Learning. It's much less intense mathematically, and it's good for a lighter introduction to the topics. (Available for free as a PDF.)
 
-            <dt><a href="http://www-bcf.usc.edu/~gareth/ISL/"><cite>An Introduction to Statistical Learning</cite> (James, Witten, Hastie, and Tibshirani)</a>
-            <dd>This book (also available as a free PDF), is written
-            by two of the same authors as The Elements of Statistical Learning. It's much less intense mathematically, and it's good for a lighter introduction to the topics.
+    			    <dt><a href="http://web4.cs.ucl.ac.uk/staff/D.Barber/pmwiki/pmwiki.php?n=Brml.HomePage"><cite>Bayesian Reasoning and Machine Learning</cite> (David Barber)</a>
+				<dd>We'll use this as a reference for probabilistic modeling, including Bayesian methods, and Bayesian networks. (Available for free as a PDF.)
+					    
+    				    <dt><a href="http://research.microsoft.com/en-us/um/people/cmbishop/PRML/"><cite>Pattern Recognition and Machine Learning</cite> (Christopher Bishop)</a>
+					<dd>This book is another very nice reference for probabilistic models and beyond.  It's highly recommended.  
+
+
+
+		<dt><a href="http://www.cs.ubc.ca/~murphyk/MLbook/index.html"><cite>Machine Learning: A Probabilistic Perspective</cite> (Kevin P. Murphy)</a>
+		    <dd>This book covers an unusually broad set of topics, including recent advances in the field. As such, it's a great reference to have, particularly if you continue your study of data science beyond this course.  That said, it was the required textbook for this course in 2015, and many students found it a bit overwhelming. It's really intended as a comprehensive, PhD-level textbook.
+
+    			<dt><a href="http://stanford.edu/~boyd/cvxbook/"><cite>Convex Optimization</cite> (Boyd and Vandenberghe)</a>
+			    <dd>This book was an instant hit in the machine learning community when it was published in 2004.  We will be making light use of this book, mostly for its coverage of Lagrangians and duality.  However, it's a good book to get familiar with, as it's very well written, and it covers a lot of techniques used in more advanced machine learning literature. (Available for free as a PDF.)
+
+
         </dl>
     </section>
 
@@ -129,6 +139,7 @@
 	    <p>(If you find additional references that you recommend, please <a href="https://piazza.com/nyu/spring2015/dsga1003/home">share them on Piazza</a> and we can add them here.)
 
     	<ul>
+            <li><a href="http://www.cims.nyu.edu/~cfgranda/pages/DSGA1002_fall15/notes.html">Carlos Fernandez-Granda's lecture notes</a> provide a comprehensive review of the prerequisite material in linear algebra, probability, statistics, and optimization.
             <li><a href="refs/matrixCookbook-15Nov2012.pdf">The Matrix Cookbook</a> has lots of facts and identities about matrices and certain probability distributions.
             <li><a href="http://cs229.stanford.edu/section/cs229-prob.pdf">Stanford CS229: "Review of Probability Theory"</a>
             <li><a href="http://cs229.stanford.edu/section/cs229-linalg.pdf">Stanford CS229: "Linear Algebra Review and Reference"</a>
@@ -141,9 +152,9 @@
     	<h1>Software</h1>
 
     	<ul>
-            <li><a href="http://www.cvxpy.org/en/latest/">CVXPY</a> and <a href="http://cvxopt.org/index.html">CVXOPT</a> are for solving convex optimization problems in Python.
-            <li><a href="http://deeplearning.net/software/theano/">Theano</a> has symbolic differentiation and facilitates GPU usage. It's a favorite for some neural networks folks.
             <li><a href="http://www.numpy.org/">NumPy</a> is "the fundamental package for scientific computing with Python." Our homework assignments will use NumPy arrays extensively.
+		<li><a href="http://scikit-learn.org/stable/">scikit-learn</a> is a comprehensive machine learning toolkit for Python. We won't use this for most of the homework assignments, since we'll be coding things from scratch. However, you may want to run the scikit-learn version of the algorithms to compare the outputs to your own, as a check. Besides that, it should be useful for many final projects, and studying the source code can be a good learning experience.  One of the core developers, <a href="http://amueller.github.io">Andreas M&uuml;ller</a>, is a Research Engineer in NYU's Center for Data Science.
+            <li><a href="http://www.cvxpy.org/en/latest/">CVXPY</a> and <a href="http://cvxopt.org/index.html">CVXOPT</a> are for solving convex optimization problems in Python. Could be useful for checking your homework results.
         </ul>
     </section>
 </section>
@@ -152,8 +163,8 @@
     <h1>Lectures</h1>
 
     <ul class="abbreviations">
-        <li> (KPM) refers to Kevin P. Murphy's book <a href="http://www.cs.ubc.ca/~murphyk/MLbook/index.html"><cite>Machine Learning: a Probabilistic Perspective</cite></a>
         <li> (HTF) refers to Hastie, Tibshirani, and Friedman's book <a href="http://statweb.stanford.edu/~tibs/ElemStatLearn/"><cite>The Elements of Statistical Learning</cite></a>
+        <li> (KPM) refers to Kevin P. Murphy's book <a href="http://www.cs.ubc.ca/~murphyk/MLbook/index.html"><cite>Machine Learning: a Probabilistic Perspective</cite></a>
         <li> (BV) refers to Boyd and Vandenberghe's <a href="http://stanford.edu/~boyd/cvxbook/"><cite>Convex Optimization</cite></a>
     </ul>
 
