Removed some lectures and links

--- a/index.hbs
+++ b/index.hbs
@@ -64,11 +64,12 @@
 
         <p>Course details can be found in the <a href="docs/syllabusDS-GA1003-Spring2015.pdf">syllabus</a>.</p>
 
-        <p>This term we will be using Piazza for class discussion. The system is highly catered to getting you help fast and efficiently from classmates, the TA, graders, and the instructor. Rather than emailing questions to the teaching staff, you are encouraged to <a href="https://piazza.com/nyu/spring2016/dsga1003/home">post your questions on Piazza</a>. If you have any problems or feedback for the developers, email <a href="mailto:team@piazza.com">team@piazza.com</a>.  Without registering, you can also view an <a href="https://piazza.com/class/i2jg9qgaxwr5fq?cid=14">anonymized version of our Piazza board</a>.</p>
+        <p>This term we will be using Piazza for class discussion. The system is highly catered to getting you help fast and efficiently from classmates, the TA, graders, and the instructor. Rather than emailing questions to the teaching staff, you are encouraged to <a href="https://piazza.com/nyu/spring2016/dsga1003/home">post your questions on Piazza</a>. If you have any problems or feedback for the developers, email <a href="mailto:team@piazza.com">team@piazza.com</a>.
+	    <!-- Without registering, you can also view an <a href="https://piazza.com/class/i2jg9qgaxwr5fq?cid=14">anonymized version of our Piazza board</a>.</p> -->
 
-        <p>This term we will be using Piazza for class discussion. The system is highly catered to getting you help fast and efficiently from classmates, the Lab Instructor, graders, and the Instructor. Rather than emailing questions to the teaching staff, you are encouraged to <a href="https://piazza.com/nyu/spring2015/dsga1003/home">post your questions on Piazza</a>. If you have any problems or feedback for the developers, email <a href="mailto:team@piazza.com">team@piazza.com</a>.  Without registering, you can also view an <a href="https://piazza.com/class/i2jg9qgaxwr5fq?cid=14">anonymized version of our Piazza board</a>.</p>
-
-        <p>See the <a href="https://www.google.com/calendar/embed?src=q5os9dtr9kebkkvv17lqtqj5qc%40group.calendar.google.com&ctz=America/New_York">Course Calendar</a> for all schedule information.</p>
+	    <p>Important Dates: 1-Hour Test on Thursday, March 3rd.  2-Hour Test on Wednesday, April 13th.</p>
+            <p>See the <a href="https://www.google.com/calendar/embed?src=q5os9dtr9kebkkvv17lqtqj5qc%40group.calendar.google.com&ctz=America/New_York">Course Calendar</a> for all schedule information.</p
+>
 
         <p>For registration information, please contact <a href="mailto:david.clark@nyu.edu">David J Clark</a>.
     </div>
