Added important dates section

--- a/index.hbs
+++ b/index.hbs
@@ -93,6 +93,19 @@
         </p>
     	<p><em>The course conforms to <a href="http://www.nyu.edu/about/policies-guidelines-compliance/policies-and-guidelines/academic-integrity-for-students-at-nyu.html">NYU’s policy on academic integrity for students</a>.</em></p>
     </section>
+
+    <section>
+        <h1>Important Dates</h1>
+        <ul>
+            <li><strong>First test</strong> (50 min) Thursday, March 3rd, 7:10-8pm.
+		<li><strong>Second test</strong> (110 min) Wednesday, April 13th, 7:10-9pm
+		    <li>Project Adviser Meeting 1 (TBD)
+			<li>Project Adviser Meeting 2 (TBD)
+			    <li>Project Adviser Meeting 1 (TBD)
+        </ul>
+    </section>
+
+
 </section>
 
 <section id="resources">
