--- a/index.hbs
+++ b/index.hbs
@@ -62,16 +62,17 @@
 
     <p>This course was designed as part of the core curriculum for the Center for Data Science's <a href="http://cds.nyu.edu/academics/ms-in-data-science/">Masters degree in Data Science</a>. Other interested students who satisfy the prerequisites are welcome to take the class as well.  Note that class is intended as a continuation of <a href="http://cds.nyu.edu/course-pages/ds-ga-1001-intro-data-science/">DS-GA-1001 Intro to Data Science</a>, which covers some important, fundamental data science topics that may not be explicitly covered in this DS-GA class (e.g. data cleaning, cross-validation, and sampling bias).</p>
 
-        <p>Course details can be found in the <a href="docs/syllabusDS-GA1003-Spring2015.pdf">syllabus</a>.</p>
-
         <p>This term we will be using Piazza for class discussion. The system is highly catered to getting you help fast and efficiently from classmates, the TA, graders, and the instructor. Rather than emailing questions to the teaching staff, you are encouraged to <a href="https://piazza.com/nyu/spring2016/dsga1003/home">post your questions on Piazza</a>. If you have any problems or feedback for the developers, email <a href="mailto:team@piazza.com">team@piazza.com</a>.
         <!-- Without registering, you can also view an <a href="https://piazza.com/class/i2jg9qgaxwr5fq?cid=14">anonymized version of our Piazza board</a>.</p> -->
 
-        <p>Important Dates: 1-Hour Test on Thursday, March 3rd.  2-Hour Test on Wednesday, April 13th.</p>
-            <p>See the <a href="https://www.google.com/calendar/embed?src=q5os9dtr9kebkkvv17lqtqj5qc%40group.calendar.google.com&ctz=America/New_York">Course Calendar</a> for all schedule information.</p
->
+            <p>Other information:</p>
+            <ul>
+                <li>Course details can be found in the <a href="docs/syllabusDS-GA1003-Spring2015.pdf">syllabus</a>.
+                <li>The <a href="https://www.google.com/calendar/embed?src=q5os9dtr9kebkkvv17lqtqj5qc%40group.calendar.google.com&ctz=America/New_York">Course Calendar</a> contains all schedule information.
+                <li>For registration information, please contact <a href="mailto:david.clark@nyu.edu">David J Clark</a>.
+                <li><em>The course conforms to <a href="http://www.nyu.edu/about/policies-guidelines-compliance/policies-and-guidelines/academic-integrity-for-students-at-nyu.html">NYU’s policy on academic integrity for students</a>.</em>
+            </ul>
 
-        <p>For registration information, please contact <a href="mailto:david.clark@nyu.edu">David J Clark</a>.
     </div>
 
     <section>
@@ -91,17 +92,17 @@
         <p>
             Many homework assignments will have problems designated as “optional”.  At the end of the semester, strong performance on these problems may lift the final course grade by up to half a letter grade (e.g. B+ to A-  or A- to A), especially for borderline grades.  You should view the optional problems primarily as a way to engage with more material, if you have the time.  Along with the performance on optional problems, we will also consider significant contributions to Piazza and in-class discussions for boosting a borderline grade.
         </p>
-        <p><em>The course conforms to <a href="http://www.nyu.edu/about/policies-guidelines-compliance/policies-and-guidelines/academic-integrity-for-students-at-nyu.html">NYU’s policy on academic integrity for students</a>.</em></p>
     </section>
 
     <section>
         <h1>Important Dates</h1>
         <ul>
             <li><strong>First test</strong> (50 min) Thursday, March 3rd, 7:10-8pm.
-        <li><strong>Second test</strong> (110 min) Wednesday, April 13th, 7:10-9pm
+            <li><strong>Second test</strong> (110 min) Wednesday, April 13th, 7:10-9pm
             <li>Project Adviser Meeting 1 (TBD)
             <li>Project Adviser Meeting 2 (TBD)
-                <li>Project Adviser Meeting 1 (TBD)
+            <li>Project Adviser Meeting 3 (Tentatively Thurs, May 5th)
+            <li>Project Poster Session (TBD, week of May 9th)
         </ul>
     </section>
 
@@ -172,6 +173,7 @@
         <ul>
             <li><a href="http://www.numpy.org/">NumPy</a> is "the fundamental package for scientific computing with Python." Our homework assignments will use NumPy arrays extensively.
         <li><a href="http://scikit-learn.org/stable/">scikit-learn</a> is a comprehensive machine learning toolkit for Python. We won't use this for most of the homework assignments, since we'll be coding things from scratch. However, you may want to run the scikit-learn version of the algorithms to compare the outputs to your own, as a check. Besides that, it should be useful for many final projects, and studying the source code can be a good learning experience.  One of the core developers, <a href="http://amueller.github.io">Andreas M&uuml;ller</a>, is a Research Engineer in NYU's Center for Data Science.
+
             <li><a href="http://www.cvxpy.org/en/latest/">CVXPY</a> and <a href="http://cvxopt.org/index.html">CVXOPT</a> are for solving convex optimization problems in Python. Could be useful for checking your homework results.
         </ul>
     </section>
@@ -218,8 +220,8 @@
             <img src="images/people/david.jpg" alt="A photo of David Rosenberg">
             <div class="info">
                 <p class="name"><a href="http://www.linkedin.com/pub/david-rosenberg/4/241/598">David Rosenberg</a>
-                <p class="email"><a href="mailto:dr129@nyu.edu">dr129@nyu.edu</a>
-                    <p class="bio">David is a data scientist in the office of the CTO at <a href="http://www.bloomberglabs.com/data-science/">Bloomberg L.P.</a>
+                    <p class="email"><a href="mailto:dr129@nyu.edu">dr129@nyu.edu</a>
+                        <p class="bio">David is a data scientist in the office of the CTO at <a href="http://www.bloomberglabs.com/data-science/">Bloomberg L.P.</a>
             </div>
         </div>
     </section>
@@ -237,11 +239,17 @@
         </div>
     </section>
 
-
     <section class="multiple-people">
         <h1>Graders</h1>
 
         <ul>
+            <li class="person module">
+                <img src="images/people/peter.jpg" alt="A photo of Peter Li">
+                <div class="info">
+                    <p class="name"><a href="https://www.linkedin.com/in/pli88">Peter Li</a> (Head Grader)
+                        <p class="email"><a href="mailto:phl232@nyu.edu">phl232@nyu.edu</a>
+                            <p class="bio">Peter is a second year student in the Data Science program at NYU.
+                </div>
 
         <li class="person module">
                     <img src="images/people/lucy.jpg" alt="A photo of Lucy Wang">
@@ -274,7 +282,6 @@
             <p class="email"><a href="mailto:t.wang@nyu.edu">t.wang@nyu.edu</a>
             <p class="bio">Tian is a second year student in the Data Science program at NYU.
                 </div>
-
         </ul>
     </section>
 
@@ -293,10 +300,10 @@
                 <img src="images/people/kurt.jpg" alt="A photo of Kurt Miller">
                 <div class="info">
                     <p class="name"><a href="http://ai.stanford.edu/~tadayuki/">Kurt Miller</a>
-                    <p class="bio">Kurt is a researcher at the quantitative hedge fund PDT Partners.
+                        <p class="bio">Kurt is a researcher at the quantitative hedge fund PDT Partners.
                 </div>
-            <li class="person module">
-                <img src="images/people/kush.jpg" alt="A photo of Kush R. Varshney">
+                <li class="person module">
+                    <img src="images/people/kush.jpg" alt="A photo of Kush R. Varshney">
                 <div class="info">
                     <p class="name"><a href="http://krvarshney.github.io/">Kush R. Varshney</a>
                     <p class="bio">Kush is a research staff member at IBM Research and a data ambassador with DataKind.
