Changed links to use web rather than local copies

--- a/index.hbs
+++ b/index.hbs
@@ -88,7 +88,7 @@
     </section>
     <section>
         <h1>Grading</h1>
-        <p><strong>Problem sets (40%) + One-Hour Test (15%) + Two-Hour Test (25%) + Project (20%)</strong></p>
+        <p><strong>Homework (40%) + One-Hour Test (15%) + Two-Hour Test (25%) + Project (20%)</strong></p>
         <p>
             Many homework assignments will have problems designated as “optional”.  At the end of the semester, strong performance on these problems may lift the final course grade by up to half a letter grade (e.g. B+ to A-  or A- to A), especially for borderline grades.  You should view the optional problems primarily as a way to engage with more material, if you have the time.  Along with the performance on optional problems, we will also consider significant contributions to Piazza and in-class discussions for boosting a borderline grade.
         </p>
@@ -267,13 +267,6 @@
                 <p class="bio">Jackie is a second-year student in the Center for Data Science. She currently works as a researcher on educational measurement issues in computer-supported collaborative learning and has experience in statistical consulting.
                 </div>
 
-    <li class="person module">
-        <img src="images/people/peter.jpg" alt="A photo of Peter Li">
-        <div class="info">
-            <p class="name"><a href="https://www.linkedin.com/in/pli88">Peter Li</a>
-        <p class="email"><a href="mailto:phl232@nyu.edu">phl232@nyu.edu</a>
-            <p class="bio">Peter is a second year student in the Data Science program at NYU.
-            </div>
 
             <li class="person module">
                 <img src="images/people/tian.jpg" alt="A photo of Tian Wang">
