Mention mlcourse repo; update prereqs

--- a/index.hbs
+++ b/index.hbs
@@ -69,6 +69,7 @@
             <ul>
                 <li>Course details can be found in the <a href="docs/syllabusDS-GA1003-Spring2015.pdf">syllabus</a>.
                 <li>The <a href="https://www.google.com/calendar/embed?src=q5os9dtr9kebkkvv17lqtqj5qc%40group.calendar.google.com&ctz=America/New_York">Course Calendar</a> contains all schedule information.
+                <li>All course materials are stored in a <a href="https://github.com/davidrosenberg/mlcourse">GitHub repository</a>.  This webpage will always link to the newest versions.  Check the repository to see when something was last updated.
                 <li>For registration information, please contact <a href="mailto:david.clark@nyu.edu">David J Clark</a>.
                 <li><em>The course conforms to <a href="http://www.nyu.edu/about/policies-guidelines-compliance/policies-and-guidelines/academic-integrity-for-students-at-nyu.html">NYU’s policy on academic integrity for students</a>.</em>
             </ul>
@@ -79,8 +80,9 @@
         <h1>Prerequisites</h1>
         <ul>
             <li><a href="http://cds.nyu.edu/course-pages/ds-ga-1001-intro-data-science/"><strong>DS-GA-1001: Intro to Data Science</strong></a> or its equivalent
-            <li><strong>Solid mathematical background</strong>, equivalent to a 1-semester undergraduate course in each of the following: linear algebra, multivariate calculus (primarily differential calculus), probability theory, and statistics.
-            <li><strong>Python programming required</strong> for all homework assignments (not necessary for auditors)
+                <li><a href="http://www.cims.nyu.edu/~cfgranda/pages/DSGA1002_fall15/index.html"><strong>DS-GA-1002: Statistical and Mathematical Methods</strong></a> or its equivalent
+                <li><strong>Solid mathematical background</strong>, equivalent to a 1-semester undergraduate course in each of the following: linear algebra, multivariate calculus (primarily differential calculus), probability theory, and statistics.  (The coverage in DS-GA 1002 is sufficient.)
+            <li><strong>Python programming required</strong> for most homework assignments.
             <li><em>Recommended:</em> Computer science background up to a "data structures and algorithms" course
             <li><em>Recommended:</em> At least one advanced, proof-based mathematics course
             <li>Some prerequisites may be waived with permission of the instructor.
