Fixed link to syllabus

--- a/index.hbs
+++ b/index.hbs
@@ -67,9 +67,9 @@
 
             <p>Other information:</p>
             <ul>
-                <li>Course details can be found in the <a href="docs/syllabusDS-GA1003-Spring2015.pdf">syllabus</a>.
+                <li>Course details can be found in the <a href="https://davidrosenberg.github.io/mlcourse/syllabusDS-GA1003-Spring2016.pdf">syllabus</a>.
                 <li>The <a href="https://www.google.com/calendar/embed?src=q5os9dtr9kebkkvv17lqtqj5qc%40group.calendar.google.com&ctz=America/New_York">Course Calendar</a> contains all schedule information.
-                <li>All course materials are stored in a <a href="https://github.com/davidrosenberg/mlcourse">GitHub repository</a>.  This webpage will always link to the newest versions.  Check the repository to see when something was last updated.
+                <li>All course materials are stored in a <a href="https://github.com/davidrosenberg/mlcourse">GitHub repository</a>.  Check the repository to see when something was last updated.
                 <li>For registration information, please contact <a href="mailto:david.clark@nyu.edu">David J Clark</a>.
                 <li><em>The course conforms to <a href="http://www.nyu.edu/about/policies-guidelines-compliance/policies-and-guidelines/academic-integrity-for-students-at-nyu.html">NYU’s policy on academic integrity for students</a>.</em>
             </ul>
