Make the people section work better at various sizes
Fixes #2; hopefully fixes #10. A few factors:

- Use flexbox and flex wrapping more uniformly, instead of using a couple manual <ul> divisions.
- On a phone, abandon flexbox and float the image, so text wraps around it better.
- Set min-width: 0 to make overflow work inside flexed items.

--- a/index.hbs
+++ b/index.hbs
@@ -249,7 +249,7 @@
             <li class="person module">
                 <img src="images/people/peter.jpg" alt="A photo of Peter Li">
                 <div class="info">
-                    <p class="name"><a href="https://www.linkedin.com/in/pli88">Peter Li</a> (Head Grader)
+                    <p class="name"><a href="https://www.linkedin.com/in/pli88">Peter Li</a> (Head&nbsp;Grader)
                     <p class="email"><a href="mailto:phl232@nyu.edu">phl232@nyu.edu</a>
                     <p class="bio">Peter is a second year student in the Data Science program at NYU.
                 </div>
