--- a/styles/phone.styl
+++ b/styles/phone.styl
@@ -132,3 +132,16 @@ body > nav
 
   .files > *
     margin-right: 10px
+
+#people
+  ul
+    display: block
+
+  .person
+    display: block
+    width: auto
+    flex-basis: auto
+    margin-right: 0
+
+    > img
+      float: left
