Use en dash instead of hyphen-minus

--- a/index.hbs
+++ b/index.hbs
@@ -45,7 +45,7 @@
             <td>Instructor: Thursday 8pm–9pm, <a href="https://www.cims.nyu.edu/dd16/Location/directions.html">Warren Weaver Hall</a> 109
         </tr>
         <tr>
-            <td>TA: Wednesdays 2pm-3pm, <a href="https://www.cims.nyu.edu/dd16/Location/directions.html">Warren Weaver Hall</a> 605
+            <td>TA: Wednesdays 2pm–3pm, <a href="https://www.cims.nyu.edu/dd16/Location/directions.html">Warren Weaver Hall</a> 605
         </tr>
         <tr>
             <td>Graders: TBD, <a href="http://cds.nyu.edu/maps-and-directory/">CDS common area</a>
