--- a/index.hbs
+++ b/index.hbs
@@ -48,7 +48,7 @@
             <td>TA: Wednesdays 2pm–3pm, <a href="https://www.cims.nyu.edu/dd16/Location/directions.html">Warren Weaver Hall</a> 605
         </tr>
         <tr>
-            <td>Graders: Tuesdays 2pm - 4pm in the <a href="http://cds.nyu.edu/maps-and-directory/">CDS common area</a>
+            <td>Graders: Tuesdays 2pm–4pm in the <a href="http://cds.nyu.edu/maps-and-directory/">CDS common area</a>
         </tr>
     </table>
 
