Addied Bonnie Ray; first draft of week 5 slides

--- a/index.hbs
+++ b/index.hbs
@@ -347,25 +347,33 @@
                  </div>
            -->
             <li class="person module">
+                <img src="images/people/brian.jpg" alt="A photo of Brian Dalessandro">
+                <div class="info">
+                    <p class="name"><a href="https://www.linkedin.com/in/briandalessandro/">Brian d'Alessandro</a></p>
+                    <p class="bio">Brian is VP of Data Science at Dstillery and Adjunct Professor of Data Science at NYU Stern School of Business.</p>
+                </div> </li>
+            <li class="person module">
                 <img src="images/people/kurt.jpg" alt="A photo of Kurt Miller">
                 <div class="info">
-                    <p class="name"><a href="http://ai.stanford.edu/~tadayuki/">Kurt Miller</a>
-                    <p class="bio">Kurt is a researcher at the quantitative hedge fund PDT Partners.
-                </div>
+                    <p class="name"><a href="http://ai.stanford.edu/~tadayuki/">Kurt Miller</a></p>
+                    <p class="bio">Kurt is a researcher at the quantitative hedge fund PDT Partners.</p>
+                </div> </li>
+
+            <li class="person module">
+                <img src="images/people/bonnie.jpg" alt="A photo of Bonnie Ray">
+                <div class="info">
+                    <p class="name"><a href="https://www.linkedin.com/in/bonnie-ray-38807a8">Bonnie Ray</a></p>
+                    <p class="bio">
+                        Bonnie is VP Data Science at Pegged Software. Prior to Pegged, she was Director, Cognitive Algorithms, at IBM Research and has also served on the faculty at the New Jersey Institute of Technology. </p>
+                </div></li>
 
             <li class="person module">
                 <img src="images/people/kush.jpg" alt="A photo of Kush R. Varshney">
                 <div class="info">
-                    <p class="name"><a href="http://krvarshney.github.io/">Kush R. Varshney</a>
-                    <p class="bio">Kush is a research staff member at IBM Research and a data ambassador with DataKind.
-                </div>
+                    <p class="name"><a href="http://krvarshney.github.io/">Kush R. Varshney</a></p>
+                    <p class="bio">Kush is a research staff member at IBM Research and a data ambassador with DataKind.</p>
+                </div></li>
 
-            <li class="person module">
-               <img src="images/people/brian.jpg" alt="A photo of Brian Dalessandro">
-                <div class="info">
-                    <p class="name"><a href="https://www.linkedin.com/in/briandalessandro/">Brian d'Alessandro</a>
-                    <p class="bio">Brian is VP of Data Science at Dstillery and Adjunct Professor of Data Science at NYU Stern School of Business.
-                </div>
         </ul>
     </section>
 </section>
