Redirect HTTP to HTTPS
Fixes #14.

--- a/index.hbs
+++ b/index.hbs
@@ -7,6 +7,14 @@
 <link rel="stylesheet" media="only screen and (max-width: 770px)" href="styles/tablet-and-phone.css">
 <link rel="stylesheet" media="only screen and (max-width: 420px)" href="styles/phone.css">
 <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+<link rel="canonical" href="https://davidrosenberg.github.io/ml2016">
+
+<script>
+  "use strict";
+  if (window.location.host.indexOf("github.io") !== -1 && window.location.protocol === "http") {
+    window.location.protocol = "https";
+  }
+</script>
 
 <nav>
     <a href="#home">Home</a>
