Added Daniel Chen, updated Brian and David

--- a/index.hbs
+++ b/index.hbs
@@ -286,7 +286,7 @@
             <div class="info">
                 <p class="name"><a href="http://www.linkedin.com/pub/david-rosenberg/4/241/598">David Rosenberg</a>
                     <p class="email"><a href="mailto:dr129@nyu.edu">dr129@nyu.edu</a>
-                        <p class="bio">David is a data scientist in the office of the CTO at <a href="http://www.bloomberglabs.com/data-science/">Bloomberg L.P.</a>
+                        <p class="bio">David is a data scientist in the office of the CTO at <a href="http://www.bloomberglabs.com/data-science/">Bloomberg L.P.</a> Formerly he was Chief Scientist of <a href="http://national.yp.com/mobile/labs/">YP Mobile Labs</a> at <a href="http://www.yellowpages.com">YP</a>.
             </div>
         </div>
     </section>
@@ -355,10 +355,18 @@
                  </div>
            -->
             <li class="person module">
+                <img src="images/people/daniel.jpg" alt="A photo of Daniel Chen">
+                <div class="info">
+                    <p class="name"><a href="http://nber.org/~dlchen/">Daniel L. Chen</a></p>
+                    <p class="bio">Daniel is at the Institute for Advanced Studies
+                        in Toulouse and Toulouse School of Economics. He is a former Chair of Law and Economics at
+                        ETH Zurich (2012-2015), Duke Assistant Professor of Law, Economics, and Public Policy (2010-2012), and Kauffman Fellow at the University of Chicago Law School (2009-2010).</p>
+                </div> </li>
+            <li class="person module">
                 <img src="images/people/brian.jpg" alt="A photo of Brian Dalessandro">
                 <div class="info">
                     <p class="name"><a href="https://www.linkedin.com/in/briandalessandro/">Brian d'Alessandro</a></p>
-                    <p class="bio">Brian is VP of Data Science at Dstillery and Adjunct Professor of Data Science at NYU Stern School of Business.</p>
+                    <p class="bio">Brian is a Lead Research Scientist in Ads Research at Facebook, and he was formerly the VP of Data Science at Dstillery.  He is also an Adjunct Professor of Data Science at NYU Stern School of Business.</p>
                 </div> </li>
             <li class="person module">
                 <img src="images/people/kurt.jpg" alt="A photo of Kurt Miller">
