--- a/index.hbs
+++ b/index.hbs
@@ -225,9 +225,9 @@
             <li><strong>Feb 29 (Mon 6pm)</strong>: Deadline for choosing project groups</li>
             <li><strong>March 10 (Thur 7-9pm)</strong>: First meeting with advisers. Each group will give a 5-minute "pitch" of their project idea to their assigned project adviser. The adviser may give immediate feedback or ask follow-up questions.</li>
             <li><strong>March 24 (Thurs 6pm)</strong>: Project Proposals Due</li>
-            <li><strong>Apr 14th or Apr 21st, TBD (Thurs 7-9pm)</strong>: Second meeting with advisers</li>
+            <li><strong>Apr 14th (Thurs 7-9pm)</strong>: Second meeting with advisers</li>
             <li><strong>May 5th (Thurs 7-9pm)</strong>: Third meeting with advisers</li>
-            <li><strong>May 11th? (TBD)</strong>:  Project Poster Session</li>
+            <li><strong>May 11th (Wed 7-9pm)</strong>:  Project Poster Session</li>
             <li><strong>May 13th, 6pm</strong>: Final Project Reports Due </li>
         </ul>
     </section>
