Updated Brian's bio

--- a/index.hbs
+++ b/index.hbs
@@ -366,7 +366,7 @@
                 <img src="images/people/brian.jpg" alt="A photo of Brian Dalessandro">
                 <div class="info">
                     <p class="name"><a href="https://www.linkedin.com/in/briandalessandro/">Brian d'Alessandro</a></p>
-                    <p class="bio">Brian is a Lead Research Scientist in Ads Research at Facebook, and he was formerly the VP of Data Science at Dstillery.  He is also an Adjunct Professor of Data Science at NYU Stern School of Business.</p>
+                    <p class="bio">Brian is Director of Data Science at Zocdoc, and he was formerly the VP of Data Science at Dstillery.  He is also an Adjunct Professor of Data Science at NYU Stern School of Business.</p>
                 </div> </li>
             <li class="person module">
                 <img src="images/people/kurt.jpg" alt="A photo of Kurt Miller">
